# huggingface-collection

./: .gitignore  README.md  main.py  pyproject.toml
.gemini/: settings.json
DeepRL-course/: unit1.ipynb
Fine-tunning-course/: DPO.ipynb  PE.ipynb  SFT.ipynb  VLMs.ipynb  chat-template.ipynb  finetuneSmolLM3.ipynb  fintuneVLM.ipynb  lora.ipynb
MCP-course/: agent.json  client.py
MCP-course/file-assistant/: agent.json  job_description.md
MCP-course/hf-pr-agent/: app.py  mcp_server.py
VLM-tunning/:  Llama-4-Scout-17B-16E-Instruct.ipynb  Qwen2-VL-7B.ipynb  SmolVLM-Instruct.ipynb  app.py  fine_tune_gemma.py  fine_tune_llava.py  finetune-llava.ipynb  inference.py
unsloth/: HuggingFace Course-Gemma3_(1B)-GRPO.ipynb  MedGemma.ipynb  grpo-test.py  unsloth.ipynb
